--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/index.css">
+    <link rel="stylesheet" href="/static/css/index.css">
+    <link rel="stylesheet" href="/static/css/form.css">
     <title>首页</title>
 </head>
 <body>
@@ -12,7 +13,7 @@
     <div class="User-box" >
         {% if request.user.is_authenticated %}
             <div class="Up-box" >
-                <a href="/customer"><p> Hello {{ CustomerName }}</p></a>
+                <a href="/customer"><p> Hello {{ request.user.username }}</p></a>
             </div>
             <div class="Up-box" >
                 <a href="/logout"><p>LOGOUT</p></a>
