--- a/templates/login.html
+++ b/templates/login.html
@@ -1,10 +1,11 @@
+
 {% extends './base.html' %}
 {% block content %}
-    <div>
-        <form action="/login/" method="POST">
+    <div class="Main-body">
+        <form action="/login/" method="POST" class="Login-box">
             {% csrf_token %}
-            登录姓名:<input type="text" name="username">
-            登录密码:<input type="password" name="password">
+            登录姓名:<input type="text" name="username" style="width:100px;height: 20px"> <br>
+            登录密码:<input type="password" name="password" style="width:100px;height: 20px"> <br>
             <input type="submit" value="提交">
         </form>
     </div>
