--- a/templates/register.html
+++ b/templates/register.html
@@ -2,14 +2,71 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="/static/css/from.css">
     <title>注册页面</title>
 </head>
 <body>
-<form action="" method="POST">
-    {% csrf_token %}
-    注册姓名:<input type="text" name="username">
-    注册密码:<input type="password" name="password">
-    <input type="submit" value="提交">
-</form>
+    <div class="Register-from">
+        <form action="/register/" method="post">
+            {% csrf_token %}
+            <table align="center">
+                <tr>
+                    <td>登录姓名:</td>
+                    <td><input type="text" name="username" style="width:100px;height: 20px"> <br></td>
+                </tr>
+                <tr>
+                    <td>登录密码:</td>
+                    <td><input type="password" name="password" style="width:100px;height: 20px"> <br>
+                    </td>               
+                </tr>
+                <tr>
+                    <td>联系电话:</td>
+                    <td>
+                        <input type="text" name="client_phone_number" style="width:100px;height: 20px"> <br>
+                    </td>
+                </tr>
+                <tr>
+                    <td>联系地址:</td>
+                    <td>
+                        <input type="text" name="client_address" style="width:200px;height: 20px"> <br>
+                    </td>
+                </tr>
+                <tr>
+                    <td>区域:</td>
+                    <td>
+                        <select name="client_region" >
+                            <option value="AT">奥地利</option>
+                            <option value="CN">中国</option>
+                            <option value="GB">英国</option>
+                            <option value="SG">新加坡</option>
+                            <option value="US">美国</option>
+                            <option value="VE">委内瑞拉</option>
+                        </select>
+                    </td>
+                </tr>
+                <tr>
+                    <td>性别:</td>
+                    <td>
+                        <select name="client_sex">
+                            <option value="male">男</option>
+                            <option value="female">女</option>
+                        <!-- <input type="text" name="client_sex" style="width:100px;height: 20px"> <br> -->
+                    </td>
+                </tr>
+                <tr>
+                    <td>邮箱:</td>
+                    <td>
+                        <input type="text" name="client_email" style="width:100px;height: 20px"> <br>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <input type="submit" value="注册">
+                    </td>
+                </tr>
+            </table>    
+        </form>
+    </div>
 </body>
 </html>
+
